[package]
name = "netspy"
version = "0.1.0"
edition = "2021"
authors = [
    "Niklas Berggren <nicke@toesmasher.se>"
]
description = "Network espionage"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ncurses = "5.101.0"
pcap = "1.1.0"
sqlite = "0.31.1"
tokio = "1.33.0"
